--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,4 +11,24 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-</RelativeLayout>
+    <ImageButton
+        android:id="@+id/activity_main_note_add_btn"
+        android:contentDescription="@string/note_add_desc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_marginLeft="14dp"
+        android:layout_marginBottom="18dp"
+        android:background="@drawable/ic_note_add_black" />
+
+    <ImageButton
+        android:id="@+id/activity_main_history_btn"
+        android:contentDescription="@string/history_desc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_marginRight="11dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/ic_history_black" />
+
+</FrameLayout>
