Improvement on the swipe method and separation ViewPagerAdapter from the MainActivity

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <item type="id" name="smiley_super_happy" />
-    <item type="id" name="smiley_happy" />
-    <item type="id" name="smiley_normal" />
-    <item type="id" name="smiley_disappointed" />
-    <item type="id" name="smiley_sad" />
+    <item type="id" name="super_happy" />
+    <item type="id" name="happy" />
+    <item type="id" name="normal" />
+    <item type="id" name="disappointed" />
+    <item type="id" name="sad" />
 </resources>
