--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:layout_marginLeft="14dp"
+        android:layout_marginStart="14dp"
         android:layout_marginBottom="18dp"
         android:background="@drawable/ic_note_add_black" />
 
@@ -26,8 +26,8 @@
         android:contentDescription="@string/history_desc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
-        android:layout_marginRight="11dp"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="11dp"
         android:layout_marginBottom="20dp"
         android:background="@drawable/ic_history_black" />
 
