--- a/app/src/main/res/layout/row_mood.xml
+++ b/app/src/main/res/layout/row_mood.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:padding="4dp"
         android:textStyle="bold"
-        android:textColor="#3b3b3b"
+        android:textColor="#A000"
         android:text="@string/text" />
 
     <ImageButton
