--- a/app/src/main/res/layout/row_mood.xml
+++ b/app/src/main/res/layout/row_mood.xml
@@ -11,7 +11,8 @@
         android:id="@+id/row_mood_date_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="4dp"
+        android:padding="3dp"
+        android:textSize="12.2sp"
         android:textStyle="bold"
         android:textColor="#A000"
         android:text="@string/text" />
