--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,15 @@
         android:background="@drawable/ic_note_add_black" />
 
     <ImageButton
+        android:id="@+id/activity_main_pie_chart_btn"
+        android:contentDescription="@string/pie_chart_desc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/ic_pie_chart_black"/>
+
+    <ImageButton
         android:id="@+id/activity_main_history_btn"
         android:contentDescription="@string/history_desc"
         android:layout_width="wrap_content"
