--- a/app/src/main/res/layout/activity_pie_chart_history.xml
+++ b/app/src/main/res/layout/activity_pie_chart_history.xml
@@ -10,8 +10,42 @@
     <com.github.mikephil.charting.charts.PieChart
         android:id="@+id/activity_piechart_history_pie_chart"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="10dp"
-        android:layout_gravity="center" />
+        android:layout_height="500dp" />
+
+    <TextView
+        android:id="@+id/activity_piechart_history_seek_bar_min_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|start"
+        android:layout_marginBottom="20dp"
+        android:layout_marginStart="55dp"
+        android:textColor="@android:color/black"
+        android:textSize="15sp" />
+
+    <TextView
+        android:id="@+id/activity_piechart_history_seek_bar_current_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:layout_marginBottom="66dp"
+        android:textColor="@android:color/black"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/activity_piechart_history_seek_bar_max_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginBottom="20dp"
+        android:layout_marginEnd="50dp"
+        android:textColor="@android:color/black"
+        android:textSize="15sp" />
+
+    <SeekBar
+        android:id="@+id/activity_piechart_history_seek_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:layout_margin="45dp" />
 
 </FrameLayout>
