--- a/app/src/main/res/layout/activity_pie_chart_history.xml
+++ b/app/src/main/res/layout/activity_pie_chart_history.xml
@@ -7,10 +7,19 @@
     android:background="#CCC"
     tools:context="com.boussaingault.maxime.moodtracker.activities.PieChartHistoryActivity">
 
+    <ImageView
+        android:layout_width="326dp"
+        android:layout_height="326dp"
+        android:layout_gravity="top|center"
+        android:layout_marginTop="74dp"
+        android:layout_marginStart="4dp"
+        android:background="@drawable/donut_shadow"
+        android:alpha="0.10"/>
+
     <com.github.mikephil.charting.charts.PieChart
         android:id="@+id/activity_piechart_history_pie_chart"
         android:layout_width="match_parent"
-        android:layout_height="500dp" />
+        android:layout_height="475dp" />
 
     <TextView
         android:id="@+id/activity_piechart_history_seek_bar_min_value"
