--- a/app/src/main/res/layout/activity_pie_chart_history.xml
+++ b/app/src/main/res/layout/activity_pie_chart_history.xml
@@ -57,6 +57,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center"
-        android:layout_margin="38dp" />
+        android:layout_margin="38dp"
+        android:visibility="gone" />
 
 </FrameLayout>
