--- a/app/src/main/res/layout/alert_dialog.xml
+++ b/app/src/main/res/layout/alert_dialog.xml
@@ -22,6 +22,7 @@
         android:layout_below="@id/alert_dialog_title_text_view"
         android:textColor="@android:color/black"
         android:textCursorDrawable="@drawable/color_cursor"
-        android:inputType="text"/>
+        android:maxLength="90"
+        android:inputType="textCapSentences|textAutoCorrect"/>
 
 </RelativeLayout>
